[package]
name = "smarthome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
serde = { version = "1.0.183", features = ["derive"] }
thiserror = "1.0.44"

[[example]]
name = "init-house"

[[test]]
name = "tests"
path = "test/tests.rs"
